--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-1.11MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-330.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-206.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇳 中国-218.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65035, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-533.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-206.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-206.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-206.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-206.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-206.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-206.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-518.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-206.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
