--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-533.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-209.4KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
-  - {name: 🇺🇸 美国-344.8KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-344.8KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-302.6KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-821.8KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-344.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-344.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-344.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-344.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-344.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-344.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-344.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-344.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
