--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-302.6KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
   - {name: 🇨🇦 加拿大-433.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-260.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 (已存活9天)香港-164.0KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-821.8KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇺🇸 美国-832.7KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇷🇺 俄罗斯联邦-639.9KB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
   - {name: 🇨🇳 中国-742.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇬🇧 英国-880.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-453.7KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-834.2KB/s(Youtube:不良林), server: 11declu.pronetworklink.net, port: 443, type: trojan, password: 56654eb4-4db0-4443-a0bb-4147ac0aa56f, sni: 11declu.pronetworklink.net, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-12.54MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.66MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-433.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活9天)香港-164.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-639.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-880.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-834.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-433.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活9天)香港-164.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-639.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-880.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-834.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-433.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活9天)香港-164.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-639.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-880.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-834.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-433.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活9天)香港-164.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-639.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-880.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-834.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-433.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活9天)香港-164.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-639.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-880.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-834.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-433.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活9天)香港-164.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-639.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-880.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-834.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-433.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-503.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活9天)香港-164.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-639.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-880.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-834.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
