--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇭🇰 香港-12.54MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇬🇧 英国-151.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-589.2KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-319.9KB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
   - {name: 🇺🇸 美国-308.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-1.21MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-313.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-772.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.48MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.24MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 未知国家-2.27MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-151.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-589.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-151.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-589.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-151.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-589.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-151.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-589.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-151.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-589.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-151.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-589.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-287.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-151.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-589.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
